--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,8 @@ h1 {
     text-shadow: 2px 2px 1px #121212;
 }
 
-.watchlist-link {
+.watchlist-link,
+.search-movies-link {
     align-self: center;
     justify-self: center;
     grid-row: 2;
@@ -76,9 +77,13 @@ h1 {
 
 .watchlist-link:hover,
 .watchlist-link:active,
-.watchlist-link:focus {
+.watchlist-link:focus,
+.search-movies-link:hover,
+.search-movies-link:active,
+.search-movies-link:focus {
     color: #FEC654;
     text-shadow: 0px 0px 0px #FEC654;
+    cursor: pointer;
 }
 
 form {
@@ -104,6 +109,11 @@ form {
     padding-left: 0.8125em;
 }
 
+/* hides search form when on the watchlist page to preserve grid */
+#watchlist form {
+    visibility: hidden;
+}
+
 .my-search {
     background-color: #2E2E2F;
     color: #A5A5A5;
@@ -118,6 +128,7 @@ form {
     margin: 0;
     border: 0;
     border-radius: 0em 0.375em 0.375em 0em;
+    cursor: pointer;
 }
 
 .search-button:active,
@@ -205,21 +216,36 @@ h2 {
 
 
 .empty-result-state,
-.search-error {
+.search-error,
+.empty-watchlist-state {
     display: flex;
     flex-direction: column;
     align-items: center;
     color: #2E2E2F;
 }
 
-.search-error {
+.go-find-button, a {
+    color: #fff;
+    font-size: 0.875em;
+    display: flex;
+    gap: 0.4375em;
+    align-items: center;
+    margin-top: 1em;
+    text-decoration: none;
+}
+
+
+
+.search-error,
+.empty-watchlist-state {
     font-size: 1.125em;
     font-weight: bold;
     text-align: center;
     margin-top: 20vh;  
 }
 
-.empty-result-state p {
+.empty-result-state p,
+.empty-watchlist-state p {
     margin: 0;
     font-size: 1.125em;
     font-weight: bold;
