--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@ body {
     LAYOUT
     =========== */
 
-.result-card-container {
+.result-card-container,
+.watchlist-card-container {
     display: grid;
     grid-template-columns: repeat(auto-fill minmax(2em, 1fr));
     grid-template-rows: repeat(auto-fill minmax(6.25em, 1fr));
@@ -104,7 +105,8 @@ form {
     bottom: -1em;
 }
 
-.search-container {
+.search-container,
+.watchlist-container {
     height: 100%;
     padding-left: 0.8125em;
 }
@@ -150,7 +152,8 @@ button:disabled {
     margin-top: 2.625em;
 }
 
-.result-card-container {
+.result-card-container,
+.watchlist-card-container {
     margin-left: auto;
     margin-right: auto;
     width: 90%;
@@ -178,8 +181,19 @@ h2 {
 .fa-star,
 .runtime,
 .genre,
-.add-button {
+.actions {
     font-size: 0.75em;
+}
+
+.actions{
+    display: flex;
+}
+
+.add-button,
+.remove-button {
+    background: 0;
+    border: 0;
+    color: #fff;
 }
 
 .fa-star {
@@ -202,7 +216,7 @@ h2 {
     grid-area: g;
 }
 
-.add-button {
+.actions {
     grid-area: b;
 }
 
