--- a/styles.css
+++ b/styles.css
@@ -9,17 +9,6 @@ body {
 }
 
 /* ============
-    LAYOUT
-    =========== */
-
-.hero-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(auto-fill, 1fr));
-    grid-template-rows: repeat(auto-fill, minmax(auto-fill, 1fr));
-}
-
-
-/* ============
     HEADER / HERO STYLES
     =========== */
 
@@ -35,6 +24,9 @@ header {
 }
 
 .hero-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     width: 90%;
     height: 100%;
     margin-left: auto;
@@ -45,8 +37,6 @@ header {
 h1 {
     align-self: center;
     justify-self: center;
-    grid-row: 1;
-    grid-column: 1 / 3;
     margin: 0;
     text-shadow: 2px 2px 1px #121212;
 }
@@ -55,8 +45,6 @@ h1 {
 .search-movies-link {
     align-self: center;
     justify-self: center;
-    grid-row: 2;
-    grid-column: 2;
     text-decoration: none;
     color: #fff;
     text-shadow: 2px 2px 1px #121212;
@@ -78,8 +66,6 @@ form {
     align-self: flex-end;
     margin-left: auto;
     margin-right: auto;
-    grid-row: 3;
-    grid-column: span 2;
     border: 0;
     border-radius: 0.375em;
     background-color: #2E2E2F;
@@ -90,7 +76,6 @@ form {
     color: #A5A5A5;
     position: relative;
     bottom: -1em;
-    justify-content: space-evenly;
 }
 
 .search-container {
@@ -100,22 +85,30 @@ form {
 
 .watchlist-container {
     height: 100%;
+    width: 90%;
+    max-width: 28.875em;
 }
 
-/* hides search form when on the watchlist page to preserve grid */
 #watchlist form {
     visibility: hidden;
 }
 
+label .fa-magnifying-glass {
+    width: 1em;
+}
+
 input.my-search {
+    flex: 1;
     background-color: #2E2E2F;
     color: #A5A5A5;
     border: 0;
     height: 100%;
+    max-width: 60%;
 }
 
 .search-button {
     height: 100%;
+    width: 5em;
     background-color: #4B4B4B;
     color: #fff;
     margin: 0;
