--- a/styles.css
+++ b/styles.css
@@ -84,13 +84,6 @@ form {
     padding-left: 0.5125em;    
 }
 
-.watchlist-container {
-    height: 100%;
-    width: 90%;
-    max-width: 28.875em;
-    margin: 0 auto;
-}
-
 #watchlist form {
     visibility: hidden;
 }
@@ -217,6 +210,15 @@ h2 {
 .actions {
     display: flex;
     align-items: center;
+}
+
+.actions:hover,
+.actions:active,
+.actions:focus {
+    i.fa-circle-plus,
+    i.fa-circle-minus {
+        color: #FEC654;
+    }
 }
 
 .add-button,
