--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: "Inter", sans-serif;
-    background-color: #121212;
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  background-color: #121212;
 }
 
 /* ============
@@ -13,40 +13,39 @@ body {
     =========== */
 
 header {
-    height: 13em;
-    width: 100vw;
-    background-image: url("images/hero-image.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: black;
-    background-blend-mode: difference;
-    filter: opacity(0.9);
+  height: 13em;
+  width: 100vw;
+  background-image: url("images/hero-image.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: black;
+  background-blend-mode: difference;
+  filter: opacity(0.9);
 }
 
 .hero-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 90%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 90%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  color: #fff;
 }
 
 h1 {
-    align-self: center;
-    justify-self: center;
-    margin: 0;
-    text-shadow: 2px 2px 1px #121212;
+  align-self: center;
+  margin: 0;
+  text-shadow: 2px 2px 1px #121212;
 }
 
 .watchlist-link,
 .search-movies-link {
-    align-self: flex-end;
-    text-decoration: none;
-    color: #fff;
-    text-shadow: 2px 2px 1px #121212;
+  align-self: flex-end;
+  text-decoration: none;
+  color: #fff;
+  text-shadow: 2px 2px 1px #121212;
 }
 
 .watchlist-link:hover,
@@ -55,72 +54,68 @@ h1 {
 .search-movies-link:hover,
 .search-movies-link:active,
 .search-movies-link:focus {
-    color: #FEC654;
-    text-shadow: 0px 0px 0px #FEC654;
-    cursor: pointer;
+  color: #fec654;
+  text-shadow: 0px 0px 0px #fec654;
+  cursor: pointer;
 }
 
 form {
-    display: flex;
-    margin: 0 auto;
-    justify-content: space-between;
-    border: 0;
-    border-radius: 0.375em;
-    background-color: #2E2E2F;
-    width: 90%;
-    max-width: 28.875em;
-    height: 2.375em;
-    align-items: center;
-    color: #A5A5A5;
-    position: relative;
-    bottom: -2.4em;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+  border: 0;
+  border-radius: 0.375em;
+  background-color: #2e2e2f;
+  width: 90%;
+  max-width: 28.875em;
+  height: 2.375em;
+  align-items: center;
+  color: #a5a5a5;
+  position: relative;
+  bottom: -2.4em;
 }
 
 .search-container {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    padding-left: 0.5125em;    
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  padding-left: 0.5125em;
 }
 
+/* hides the search bar when on the watchlist page */
 #watchlist form {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 label .fa-magnifying-glass {
-    width: 1em;
+  width: 1em;
 }
 
 input.my-search {
-    flex-grow: 1;
-    background-color: #2E2E2F;
-    color: #A5A5A5;
-    border: 0;
-    height: 2.375em;
-    padding-left: 0.3em;
+  flex-grow: 1;
+  background-color: #2e2e2f;
+  color: #a5a5a5;
+  border: 0;
+  height: 2.375em;
+  padding-left: 0.3em;
 }
 
 .search-button {
-    height: 100%;
-    width: 5em;
-    background-color: #4B4B4B;
-    color: #fff;
-    border: 0;
-    border-radius: 0em 0.375em 0.375em 0em;
-    cursor: pointer;
+  height: 100%;
+  width: 5em;
+  background-color: #4b4b4b;
+  color: #fff;
+  border: 0;
+  border-radius: 0em 0.375em 0.375em 0em;
+  cursor: pointer;
 }
 
 .search-button:active,
 .search-button:focus,
 .search-button:hover {
-    background-color: #a5a5a585
+  background-color: #a5a5a585;
 }
-
-button:disabled {
-    cursor: not-allowed;
-}
-
 
 /* ============
     CARD & CARD CONTAINER STYLES
@@ -128,118 +123,117 @@ button:disabled {
 
 .search-results-container,
 .watchlist-container {
-    margin-top: 2.625em;
+  margin-top: 2.625em;
 }
 
 .result-card-container,
 .watchlist-card-container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0.5em 0;
-    width: 90%;
-    max-width: 28.875em;
-    min-height: 12.3125em;
-    border-bottom: 1px solid #2c2c2c;
-    color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0.5em 0;
+  width: 90%;
+  max-width: 28.875em;
+  min-height: 12.3125em;
+  border-bottom: 1px solid #2c2c2c;
+  color: #fff;
 }
 
 .card-content {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .card-header {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .card-info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0.3em 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.3em 0;
 }
 
 .fa-star,
 .runtime,
 .genre,
 .actions {
-    font-size: 0.75em;
+  font-size: 0.75em;
 }
 
 .card-poster {
-    display: none;
+  display: none;
 }
 
 .poster {
-    justify-self: center;
-    height: 9.25em;
-    width: 6.25em;
+  justify-self: center;
+  height: 9.25em;
+  width: 6.25em;
 }
 
 /* Card Header */
 
 h2 {
-    font-weight: medium;
-    font-size: 1.125em;
-    margin: 0;
-
+  font-weight: medium;
+  font-size: 1.125em;
+  margin: 0;
 }
 
 .fa-star {
-    color: #FEC654;
-    height: 0.9375em;
+  color: #fec654;
+  height: 0.9375em;
 }
 
 .imdb-rating {
-    font-size: 0.65em;
+  font-size: 0.65em;
 }
 
 .fa-star,
 .imdb-rating {
-    margin-left: 0.5em;
-    align-self: center;
+  margin-left: 0.5em;
+  align-self: center;
 }
 
 /* Card Info */
 
 .actions {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .actions:hover,
 .actions:active,
 .actions:focus {
-    i.fa-circle-plus,
-    i.fa-circle-minus {
-        color: #FEC654;
-    }
+  i.fa-circle-plus,
+  i.fa-circle-minus {
+    color: #fec654;
+  }
 }
 
 .add-button,
 .remove-button {
-    background: 0;
-    border: 0;
-    color: #fff;
-    display: none;
+  background: 0;
+  border: 0;
+  color: #fff;
+  display: none;
 }
 
 i.fa-circle-plus,
 i.fa-circle-minus {
-    font-size: 3em;
+  font-size: 3em;
 }
 
 /* Card Plot */
 .plot-container {
-    font-size: 0.875em;
-    color: #a5a5a5;
-    display: flex;
-    margin-top: 0.7em;
+  font-size: 0.875em;
+  color: #a5a5a5;
+  display: flex;
+  margin-top: 0.7em;
 }
 
 /* ============
@@ -249,43 +243,44 @@ i.fa-circle-minus {
 .empty-result-state,
 .search-error,
 .empty-watchlist-state {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #2E2E2F;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #2e2e2f;
 }
 
-.go-find-button, a {
-    color: #fff;
-    font-size: 0.875em;
-    display: flex;
-    gap: 0.4375em;
-    align-items: center;
-    text-decoration: none;
+.go-find-button,
+a {
+  color: #fff;
+  font-size: 0.875em;
+  display: flex;
+  gap: 0.4375em;
+  align-items: center;
+  text-decoration: none;
 }
 
 #watchlist-container > div > div > a {
-    margin-top: 1em;
+  margin-top: 1em;
 }
 
 .search-error,
 .empty-watchlist-state {
-    font-size: 1.125em;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 20vh;  
+  font-size: 1.125em;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 20vh;
 }
 
 .empty-result-state p,
 .empty-watchlist-state p {
-    margin: 0;
-    font-size: 1.125em;
-    font-weight: bold;
+  margin: 0;
+  font-size: 1.125em;
+  font-weight: bold;
 }
 
 .fa-film {
-    font-size: 5em;
-    margin-top: 20vh;
+  font-size: 5em;
+  margin-top: 20vh;
 }
 
 /* ============
@@ -293,38 +288,29 @@ i.fa-circle-minus {
     =========== */
 
 @media (max-width: 338px) {
-    #index > header > div > form > div > label > i {
-        display: none;
-    }
-
-    input.my-search {
-        width: 100%; 
-        border-radius: 0.375em;
-    }
+  #index > header > div > form > div > label > i {
+    display: none;
+  }
 }
 
 @media (min-width: 375px) {
-    .card-poster {
-        display: flex;
-    }
+  .card-poster {
+    display: flex;
+  }
 
-    .card-content {
-        margin-left: 0.8em;
-    }
-
-    h1 {
-        align-self: flex-start;
-    }
+  .card-content {
+    margin-left: 0.8em;
+  }
 }
 
 @media (min-width: 480px) {
-    .add-button,
-    .remove-button {
-        display: flex;
-    }
+  .add-button,
+  .remove-button {
+    display: flex;
+  }
 
-    i.fa-circle-plus,
-    i.fa-circle-minus {
-        font-size: 2em;
-    }
+  i.fa-circle-plus,
+  i.fa-circle-minus {
+    font-size: 2em;
+  }
 }
